    - added CMSynergyBaselinePublisher
    - added CMSynergyTaskPublisher
    - added instance attribute to CMSynergy source control

cruisecontrol.sh:
----------------------
* Execute java from JAVA_HOME. Patch by Martin Jaeger.

CruiseControlController
----------------------
* Reloads the config file if it has changed (CC-74). Contributions by Jerome Lacoste, Tangi Vass, and Jeffrey Fredrick

CVS:
----------------------
* Add module attribute so it can work with no local working copy (CC-149). Patch by Lars Gehrken
* Updated documentation and class comments to correctly reflect the required attributes after the module change (CC-207). Patch by Mark Doliner
* No longer using environment variable CVS_ROOT. Validation now requires one to either set localworkingcopy or cvsroot and module (CC-207). Patch by Mark Doliner
* Fixed getting cvs version number to avoid the NPE, and automatically use the old format in that case (CC-105). Patch by Jerome Lacoste.

CVSBootstrapper:
----------------------
* Add overwriteChanges attribute.

DefaultLabelIncrementer:
----------------------
* Fixed bug when using non-default label separator (CC-155). Patch by Jerome Lacoste

documentation:
----------------------
* Spelling corrections. Patch by Larry Shatzer.

EmailPublisher:
----------------------
* Now accepts <alert> elements to notify users of modifications in files matching a regexp (CC-120). Patch by Eric Spiegelberg

FTPPublisher:
----------------------
* Made setDeleteArtifacts take a boolean argument, instead of parsing a String as a boolean, for consistency with other plugins (CC-158).
  This means that you MUST use "true" or "false" now in your config file for deleteArtifacts-attribute, and not "yes" or "no"!

HTMLEmailPublisher:
----------------------
* Now tries to determine the locations for xslDir and css automatically when they're not specified
* HTMLEmailPublisher fails to transform xml (CC-112)

index.jsp:
----------------------